--- a/NewsAggregatorApi/appsettings.json
+++ b/NewsAggregatorApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=176.112.192.22;Port=5432;Database=NewsAgregator;UserId=postgres;Password=Ivan230691"
+  }
 }
